--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,11 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-formidable": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.4",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "slugify": "^1.6.5"
   }
 }
