--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,13 @@
     "antd": "^5.0.3",
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
+    "braintree": "^3.12.0",
+    "braintree-web-drop-in-react": "^1.2.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
