--- a/server/package.json
+++ b/server/package.json
@@ -11,18 +11,20 @@
     "ecommerce",
     "nodejs"
   ],
-  "author": "Bernardas",
+  "author": "Ryan",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "@sendgrid/mail": "^7.7.0",
+    "bcrypt": "^5.0.1",
+    "braintree": "^3.12.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "express-formidable": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.4",
+    "mongoose": "^6.5.4",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.19",
     "slugify": "^1.6.5"
   }
 }
